--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import 'jqueryClasses.scss';
 @import 'cardDisplay.scss';
 @import 'progressBar.scss';
+@import 'tutMessage.scss';
 
 
 /***************************************************/
