--- a/sass/progressBar.scss
+++ b/sass/progressBar.scss
@@ -4,7 +4,9 @@
   width: 5%;
   height: 10%;
   background-color: green;
-  margin-left: 1.5rem; 
+  margin-left: 1.5rem;
+  border-radius: 25px;
+  box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
   left: 0;
 }
 
