Created button output for the tut div and a default exit button

--- a/sass/tutMessage.scss
+++ b/sass/tutMessage.scss
@@ -18,5 +18,29 @@ $game-font: 'VT323', monospace;
   font-size: 20px;
   color: white;
 };
+/***************************************************/
+
+
+/***************************************************/
+/**  Styles for the tut info buttons  **/
+#tut-message button {
+  font-size: 20px;
+  margin: .5rem;
+  border: dotted 2px black;
+  box-shadow: 2px 2px 2px black;
+};
+
+#tut-message button:hover {
+  color: white;
+  box-shadow: 4px 4px 4px black;
+};
+
+#exit-btn {
+  background: red;
+};
+
+#action-btn {
+  background: green;
+};
 
 /***************************************************/
