Randomly generated cards, and can now output div's with img backgroud to outputDiv

--- a/sass/cardDisplay.scss
+++ b/sass/cardDisplay.scss
@@ -5,10 +5,6 @@ $game-font: 'VT323', monospace;
 /***************************************************/
 /**  Base styles for the game page  **/
 .card-level-title {
-  position: relative;
-  left: 50vh;
-  bottom: 35vh;
-
   color: white;
   font-family: $game-font;
 }
@@ -18,10 +14,11 @@ $game-font: 'VT323', monospace;
 /***************************************************/
 /* Base styles for game mode when 6 cards are showing */
 
-.cardDiv6 {
-  width: 200px;
-  height: 200px;
+.card-div-8 {
+  width: 150px;
+  height: 150px;
   background: black;
-  margin: 4rem;
+  background-size: contain;
+  margin: 1rem;
 }
 /***************************************************/
