--- a/sass/progressBar.scss
+++ b/sass/progressBar.scss
@@ -7,6 +7,7 @@
   margin-left: 1.5rem;
   border-radius: 25px;
   box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
+  align-self: center;
   left: 0;
 }
 
