--- a/sass/cardDisplay.scss
+++ b/sass/cardDisplay.scss
@@ -17,8 +17,10 @@ $game-font: 'VT323', monospace;
 .card-div-8 {
   width: 150px;
   height: 150px;
-  background: black;
-  background-size: contain;
   margin: 1rem;
+
+  background: black;
+  background-size: cover;
+  border-radius: 20px 5px 20px 5px;
 }
 /***************************************************/
