--- a/sass/cardDisplay.scss
+++ b/sass/cardDisplay.scss
@@ -7,6 +7,8 @@ $game-font: 'VT323', monospace;
 .card-level-title {
   color: white;
   font-family: $game-font;
+  width: 100%;
+  text-align: center;
 }
 /***************************************************/
 
