--- a/sass/cardDisplay.scss
+++ b/sass/cardDisplay.scss
@@ -4,11 +4,25 @@ $game-font: 'VT323', monospace;
 
 /***************************************************/
 /**  Base styles for the game page  **/
+.level-div {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 .card-level-title {
   color: white;
   font-family: $game-font;
-  width: 100%;
   text-align: center;
+}
+
+.heart-icon {
+  width: 50px;
+  height: 50px;
+  margin: 0;
+  background-image: url('heart.png');
 }
 /***************************************************/
 
