--- a/sass/cardDisplay.scss
+++ b/sass/cardDisplay.scss
@@ -8,19 +8,23 @@ $game-font: 'VT323', monospace;
   display: flex;
   flex-direction: row;
   width: 100%;
+  margin-left: 1rem;
   align-items: center;
   flex-wrap: wrap;
 }
 
 .card-level-title {
+  margin: 0;
+  margin-left: -2rem;
+  flex: 1;
   color: white;
   font-family: $game-font;
   text-align: center;
 }
 
 .heart-icon {
-  width: 50px;
-  height: 50px;
+  width: 25px;
+  height: 25px;
   margin: 0;
   background-image: url('heart.png');
 }
