--- a/sass/cardDisplay.scss
+++ b/sass/cardDisplay.scss
@@ -34,7 +34,7 @@ $game-font: 'VT323', monospace;
 /***************************************************/
 /* Base styles for game mode when 6 cards are showing */
 
-.card-div-8 {
+.card-div {
   width: 150px;
   height: 150px;
   margin: 1rem;
