--- a/sass/cardDisplay.scss
+++ b/sass/cardDisplay.scss
@@ -44,3 +44,30 @@ $game-font: 'VT323', monospace;
   border-radius: 20px 5px 20px 5px;
 }
 /***************************************************/
+
+
+/***************************************************/
+/* CSS3 animations for card play listed here */
+
+/* Animation classes listed here */
+
+.flip-face-down {
+  animation: flipcard 5s 0s 1 forwards;
+}
+
+
+/* Keyframes listed here */
+
+@keyframes flipcard {
+  0% {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  100% {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+
+/***************************************************/
