Transistions for game start work and clicking a card to flip now work

--- a/sass/cardDisplay.scss
+++ b/sass/cardDisplay.scss
@@ -52,15 +52,36 @@ $game-font: 'VT323', monospace;
 /* Animation classes listed here */
 
 .flip-card {
-  animation: flipcard 2s 0s 1 forwards;
+  animation: flipcard 2s 0s 1 ease-in;
+}
+
+.card-default-style {
+  animation: carddefaultstyle 2s 4s ease-in forwards;
+}
+
+.flipped {
+  background-color: rgb(0,0,0);
 }
 
 
 /* Keyframes listed here */
 
+//Animation that blacks cards out at start of game
+@keyframes carddefaultstyle {
+  0% {
+    // background: inherit;
+  }
+  100% {
+    background: rgb(0,0,0);
+    transform: rotateY(180deg);
+  }
+}
+
+//Animation that is added when card is flipped
 @keyframes flipcard {
   0% {
-    transform: rotateY(0deg);
+    background: rgb(0,0,0);
+    transform: rotateY(180deg);
   }
 
   100% {
