--- a/sass/cardDisplay.scss
+++ b/sass/cardDisplay.scss
@@ -41,6 +41,7 @@ $game-font: 'VT323', monospace;
 
   background: black;
   background-size: cover;
+  border: solid 1px black;
   border-radius: 20px 5px 20px 5px;
 }
 /***************************************************/
@@ -59,8 +60,8 @@ $game-font: 'VT323', monospace;
   animation: carddefaultstyle 2s 3s ease-in forwards;
 }
 
-.flipped {
-  background-color: rgb(0,0,0);
+.match-success {
+  animation: matchsuccess 1s 1s 1 ease-in;
 }
 
 
@@ -84,6 +85,25 @@ $game-font: 'VT323', monospace;
 
   100% {
     transform: rotateY(360deg);
+  }
+}
+
+//Animation when player successfully matches a pair
+@keyframes matchsuccess {
+  0% {
+    border: solid 1px rgba(0,255,0,.2);
+  }
+  25% {
+    border: solid 1px rgba(0,255,0,.7);
+  }
+  50% {
+    border: solid 1px rgba(0,255,0,.2);
+  }
+  75% {
+    border: solid 1px rgba(0,255,0,.7);
+  }
+  100% {
+    border: solid 1px rgba(0,255,0,.2);
   }
 }
 
