Can now build successful match message, need to resize

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import 'cardDisplay.scss';
 @import 'progressBar.scss';
 @import 'tutMessage.scss';
+@@import 'matchMessage';
 
 $game-font: 'VT323', monospace;
 
