Can now display successful match message and fixed browserify bug

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,7 @@
 @import 'cardDisplay.scss';
 @import 'progressBar.scss';
 @import 'tutMessage.scss';
-@@import 'matchMessage';
+@import 'matchMessage.scss';
 
 $game-font: 'VT323', monospace;
 
