Style match message

--- a/sass/matchMessage.scss
+++ b/sass/matchMessage.scss
@@ -10,7 +10,7 @@ $game-font: 'VT323', monospace;
   top: 70px;
   font-family: $game-font;
   font-size: 30px;
-  color: white;
+  color: rgba(0,255,0,.7);
 }
 
 .match-div-show {
@@ -21,7 +21,13 @@ $game-font: 'VT323', monospace;
   0% {
     opacity: 0;
   }
+  25% {
+    opacity: 1;
+  }
   50% {
+    opacity: 0;
+  }
+  75% {
     opacity: 1;
   }
   100% {
