--- a/sass/matchMessage.scss
+++ b/sass/matchMessage.scss
@@ -10,18 +10,31 @@ $game-font: 'VT323', monospace;
   top: 70px;
   font-family: $game-font;
   font-size: 30px;
+}
+
+.success {
   color: rgba(0,255,0,.7);
 }
 
+.fail {
+  color: rgba(255, 0, 0, .7);
+}
+
 .match-div-show {
-  animation: matchdivshow 3s 0s ease-in;
+  animation: matchdivshow 1s 0s ease-in;
 }
 
 @keyframes matchdivshow {
   0% {
     opacity: 0;
   }
+  25% {
+    opacity: 1
+  }
   50% {
+    opacity: 0;
+  }
+  75% {
     opacity: 1;
   }
   100% {
